--- a/styles/all/theme/boardnotices.css
+++ b/styles/all/theme/boardnotices.css
@@ -4,7 +4,7 @@
 	font-size: 1.1em;
 	padding: 10px;
 	border-radius: 7px;
-	background-color: #ECD5D8; /* default color */
+	background-color: #ECD5D8;
 }
 
 /* zero out any text margins and scroll any overflow */
